<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8">

        <RelativeLayout
            android:id="@+id/rl_card_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:tooltipText="@string/edit_tooltip">

            <TextView
                android:id="@+id/txt_list_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                android:tooltipText="@string/delete_tooltip" />

            <TextView
                android:id="@+id/txt_driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_toRightOf="@id/txt_list_driver_name"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                android:tooltipText="@string/delete_tooltip" />

            <TextView
                android:id="@+id/txt_list_licenseNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_driver_name"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/license_number"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_license_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_driver_name"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_toRightOf="@id/txt_list_licenseNumber"
                android:textSize="@dimen/text_size_18"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_list_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_licenseNumber"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/date"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_licenseNumber"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_toRightOf="@id/txt_list_date"
                android:textSize="@dimen/text_size_18"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_list_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_date"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/time"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_date"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_toRightOf="@id/txt_list_time"
                android:textSize="@dimen/text_size_18"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_list_inbound_tonnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_time"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/inbound_tonnage"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_inbound_tonnage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_list_time"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_toRightOf="@id/txt_list_inbound_tonnage"
                android:textSize="@dimen/text_size_18"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_list_outbound_tonnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_inbound_tonnage"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/outbound_tonnage"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_outbound_tonnage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_inbound_tonnage"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_toRightOf="@id/txt_list_outbound_tonnage"
                android:textSize="@dimen/text_size_18"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_list_net_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_outbound_tonnage"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/net_weight"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_net_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_outbound_tonnage"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_toRightOf="@id/txt_list_net_weight"
                android:textSize="@dimen/text_size_18"
                android:textStyle="italic" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>