<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.dialog.SortDialog">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <View
                android:id="@+id/drag_indicator"
                android:layout_width="@dimen/width_36"
                android:layout_height="@dimen/height_6"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_24"
                android:background="@drawable/bg_gray_collapse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/sort_by"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_16"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_8">

                <Button
                    android:id="@+id/button_name_asc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_64"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/btn_driver_name_asc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                    app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/height_2" />

                <Button
                    android:id="@+id/button_name_desc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_64"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/btn_driver_name_desc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                    app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/height_2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_16" />

                <Button
                    android:id="@+id/button_date_asc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_64"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/btn_date_asc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                    app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/height_2" />

                <Button
                    android:id="@+id/button_date_desc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_64"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/btn_date_desc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                    app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/height_2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_16" />

                <Button
                    android:id="@+id/button_license_asc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_64"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/btn_license_number_asc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                    app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/height_2" />

                <Button
                    android:id="@+id/button_license_desc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_64"
                    android:layout_marginHorizontal="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/btn_license_number_desc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:backgroundTint="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                    app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="@dimen/height_2" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</layout>